--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="./css/main.css"> -->
-    <!-- <link rel="stylesheet" href="/css/"> -->
     <link rel="stylesheet" href="/dist/output.css">
 </head>
-<body>
-    <ul>
-        <!-- < li class= "flex flex-row" >
-                <img src="${el.image}" alt="" class="w-4 h-4 rounded-full">
-                <div class="info">
-                    <h1 class="title">${el.title}</h1>
-                    <h2>${el.publisher}</h2>
-                </div>
-            </li> -->
-    </ul>
-    <script src="model.js"></script>
+<body class="bg-gradient-to-br from-purple-700 to-purple-500 flex justify-center items-center h-screen">
+    <div class="container flex flex-col w-1/2">
+        <form class="flex justify-center">
+            <input type="text" placeholder="search" class="input px-2 py-3 rounded-md outline-none w-full">
+            <input type="submit" class="submit-btn bg-red-800 rounded-xl text-white px-5 py-3 cursor-pointer" value="submit">
+        </form>
+        <ul>
+        </ul>
+    </div>
+    <!-- <script src="model.js"></script> -->
+    <script src="./practice.js"></script>
 </body>
 </html>
