--- a/responsive site/src/index.html
+++ b/responsive site/src/index.html
@@ -33,7 +33,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
         </div>
-        <div class="menu hidden text-center rounded-full hidden mt-32">
+        <div class="menu hidden text-center rounded-full transition-300ms mt-32">
             <ul>
                 <li class="list bg-slate-400 border-b-2 border-black"><a href="#">Home</a></li>
                 <li class="list bg-slate-400 border-b-2 border-black"><a href="#">Home</a></li>
